# goit-pythonweb-hw-02

./: Dockerfile  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
conf/: db.py
