[project]
name = "goit-pythonweb-hw-02"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmytro Zhuk",email = "140021292+dm-zhuk@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "[>=3.10]"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
